--- a/app/src/main/res/layout/esterilizacion_list_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_list_fragment.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/adopcion"
@@ -10,8 +11,8 @@
 
     <TextView
         android:id="@+id/nombreMaterial"
-        android:layout_width="135dp"
-        android:layout_height="59dp"
+        android:layout_width="145dp"
+        android:layout_height="33dp"
         android:layout_marginStart="120dp"
         android:layout_marginLeft="120dp"
         android:layout_marginTop="20dp"
@@ -20,29 +21,30 @@
         android:gravity="center_vertical"
         android:text="Nombre Gato"
         android:textColor="@color/black"
-        android:textSize="23dp"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/material_foto"
-        android:layout_width="86dp"
-        android:layout_height="96dp"
+        android:layout_width="70dp"
+        android:layout_height="49dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gato_gris" />
 
     <ImageView
         android:id="@+id/esterilizacion_pagada"
-        android:layout_width="108dp"
-        android:layout_height="92dp"
+        android:layout_width="73dp"
+        android:layout_height="50dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coins" />
