--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,8 @@
     <color name="grey">#5B5858</color>
     <color name="red">#9E2E31</color>
     <color name="green">#69CF60</color>
-    <color name="material">#ACE1DC</color>
+    <color name="material">#D3E6E5</color>
     <color name="light_gray">#E4E4E4</color>
     <color name="pink">#F48FB1</color>
+    <color name="light_pink">#FCE4EC</color>
 </resources>
