--- a/app/src/main/res/menu/agregar_pension.xml
+++ b/app/src/main/res/menu/agregar_pension.xml
@@ -7,4 +7,11 @@
         android:title="@string/a_adir_objeto"
         android:iconTint="@color/black"
         app:showAsAction="ifRoom|withText"/>
+
+    <item
+        android:id="@+id/botiquin"
+        android:icon="@drawable/medicina"
+        android:title="@string/a_adir_objeto"
+        android:iconTint="@color/black"
+        app:showAsAction="ifRoom|withText"/>
 </menu>
