--- a/app/src/main/res/layout/vista_adopcion_fragment.xml
+++ b/app/src/main/res/layout/vista_adopcion_fragment.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="@color/black"
+        android:fontFamily="@font/alegreya_sans_extrabold"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
