--- a/app/src/main/res/layout/datos_pension_fragment.xml
+++ b/app/src/main/res/layout/datos_pension_fragment.xml
@@ -208,7 +208,7 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="$"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toEndOf="@+id/textView22"
         app:layout_constraintTop_toBottomOf="@+id/mes_salida" />
 
