--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/pension"
-        android:icon="@android:drawable/ic_delete"
+        android:icon="@drawable/house"
         android:iconTint="@color/black"
         android:title="@string/pensiones"
         app:showAsAction="ifRoom|withText"/>
