--- a/app/src/main/res/drawable/withe_rectangle.xml
+++ b/app/src/main/res/drawable/withe_rectangle.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="#D1C4E9" />
+    <solid android:color="#FDFDFC" />
+    <stroke android:width="3dip" android:color="#020202" />
 
     <corners android:radius="30px">
     </corners>
