--- a/app/src/main/res/drawable/yellow_rectangle.xml
+++ b/app/src/main/res/drawable/yellow_rectangle.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="#D1C4E9" />
+    <solid android:color="#ECF4F8" />
+    <stroke android:width="5dip" android:color="#B3E5FC" />
 
     <corners android:radius="30px">
     </corners>
