--- a/app/src/main/res/layout/campania_list_fragment.xml
+++ b/app/src/main/res/layout/campania_list_fragment.xml
@@ -5,23 +5,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rectangle"
-    android:layout_marginBottom="3dp"
+    android:background="@drawable/purple_rectangle"
+    android:layout_marginBottom="4dp"
     android:layout_marginHorizontal="5dp">
+
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/nombre_campaña"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/huella" />
 
     <TextView
         android:id="@+id/nombre_campaña"
-        android:layout_width="230dp"
+        android:layout_width="211dp"
         android:layout_height="51dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/alegreya_sans_extrabold"
-        android:text="@string/nombre_campa_a"
         android:gravity="center_vertical"
+        android:text="@string/nombre_campa_a"
         android:textColor="@color/black"
         android:textSize="23dp"
+        app:fontFamily="sans-serif-medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
