--- a/app/src/main/res/layout/esterilizacion_list_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_list_fragment.xml
@@ -5,23 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/adopcion"
-    android:layout_marginBottom="3dp"
+    android:background="@drawable/yellow_rectangle"
+    android:layout_marginBottom="4dp"
     android:layout_marginHorizontal="5dp">
 
     <TextView
         android:id="@+id/nombreMaterial"
-        android:layout_width="145dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginLeft="120dp"
+        android:layout_width="167dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginLeft="108dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/alegreya_sans_extrabold"
         android:gravity="center_vertical"
         android:text="Nombre Gato"
         android:textColor="@color/black"
-        android:textSize="17dp"
+        android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,22 +29,22 @@
 
     <ImageView
         android:id="@+id/material_foto"
-        android:layout_width="70dp"
-        android:layout_height="49dp"
+        android:layout_width="77dp"
+        android:layout_height="57dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gato_gris" />
+        app:srcCompat="@drawable/gato_gris_2" />
 
     <ImageView
         android:id="@+id/esterilizacion_pagada"
-        android:layout_width="73dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_width="81dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/coins" />
