--- a/app/src/main/res/layout/material_list.xml
+++ b/app/src/main/res/layout/material_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:id="@+id/material_item"
     android:layout_height="wrap_content"
-    android:background="@color/material"
+    android:background="@drawable/blue_rectangle"
     android:layout_marginBottom="3dp"
     android:layout_marginHorizontal="5dp">
 
@@ -24,6 +24,7 @@
         android:text="@string/nombre_material"
         android:textColor="@color/black"
         android:textSize="23dp"
+        app:fontFamily="@font/patrick_hand"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/material_foto"
         app:layout_constraintTop_toTopOf="parent" />
