--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF9A4D</color>
+    <color name="colorPrimary">#EDE7F6</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF9A4D</color>
-    <color name="violet">#D1C4E9</color>
+    <color name="violet">#C5CAE9</color>
     <color name="orange">#FFF8E1</color>
     <color name="black">#000000</color>
     <color name="orange2">#FF9A4D</color>
