--- a/app/src/main/res/layout/esterilizacion_datos_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_datos_fragment.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#F9FFFE"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="202dp"
-        android:layout_height="128dp"
+        android:layout_width="221dp"
+        android:layout_height="186dp"
         android:layout_marginStart="114dp"
         android:layout_marginLeft="114dp"
         android:layout_marginTop="16dp"
@@ -19,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/gato_esterilizacion_color" />
+        app:srcCompat="@drawable/veterinary" />
 
     <CheckBox
         android:id="@+id/faja"
@@ -141,7 +142,8 @@
         android:id="@+id/terminar_esterilizacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="Terminar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -152,9 +154,10 @@
         android:id="@+id/pagado"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/red"
-        android:fontFamily="@font/amaranth_bold"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/rectangle"
+        android:backgroundTint="#E88688"
+        android:fontFamily="@font/allan_bold"
         android:text="PAGADO"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
