--- a/app/src/main/res/drawable/blue_rectangle2.xml
+++ b/app/src/main/res/drawable/blue_rectangle2.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="#FDFDFD" />
-    <stroke android:width="5dip" android:color="#F1D2A5" />
+    <solid android:color="#FFFFFF" />
+    <stroke android:width="5dip" android:color="#A5D1F4" />
 
     <corners android:radius="30px">
     </corners>
