--- a/app/src/main/res/drawable/gray_rectangle.xml
+++ b/app/src/main/res/drawable/gray_rectangle.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="#54C8C5C5" />
+    <solid android:color="#FFFFFF" />
+    <stroke android:width="5dip" android:color="@color/grey"/>
 
     <corners android:radius="30px">
     </corners>
