--- a/app/src/main/res/drawable/purple_rectangle.xml
+++ b/app/src/main/res/drawable/purple_rectangle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid android:color="#FFFFFF" />
-    <stroke android:width="5dip" android:color="#F3E5F5" />
+    <stroke android:width="5dip" android:color="#EFCDF4" />
 
     <corners android:radius="30px">
     </corners>
