--- a/app/src/main/res/layout/datos_pension_fragment.xml
+++ b/app/src/main/res/layout/datos_pension_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="44dp"
         android:layout_marginLeft="44dp"
         android:text="Año"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-thin"
@@ -27,7 +27,7 @@
         android:layout_marginStart="44dp"
         android:layout_marginLeft="44dp"
         android:text="Año"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-thin"
@@ -36,8 +36,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="123dp"
-        android:layout_height="98dp"
+        android:layout_width="162dp"
+        android:layout_height="166dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
         android:text="Mes"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-thin"
@@ -133,7 +133,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginLeft="48dp"
         android:text="Mes"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-thin"
@@ -216,10 +216,14 @@
         android:id="@+id/terminar_pensión"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/blue_rectangle2"
+        android:fontFamily="@font/amaranth_bold"
+        android:padding="15dp"
         android:text="Terminar"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pagado" />
 
@@ -230,7 +234,7 @@
         android:layout_marginStart="180dp"
         android:layout_marginLeft="180dp"
         android:text="Dia"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-thin"
@@ -272,7 +276,7 @@
         android:layout_marginStart="180dp"
         android:layout_marginLeft="180dp"
         android:text="Dia"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-thin"
