--- a/app/src/main/res/layout/dialog_campania.xml
+++ b/app/src/main/res/layout/dialog_campania.xml
@@ -51,6 +51,8 @@
         android:id="@+id/date_picker_campaña"
         android:layout_width="match_parent"
         android:layout_height="431dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
