--- a/app/src/main/res/layout/gato_fragment.xml
+++ b/app/src/main/res/layout/gato_fragment.xml
@@ -9,20 +9,22 @@
 
     <ImageView
         android:id="@+id/materialImagen"
-        android:layout_width="183dp"
-        android:layout_height="128dp"
+        android:layout_width="234dp"
+        android:layout_height="171dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gato_gris" />
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="335dp"
+        android:layout_width="398dp"
+        android:layout_height="393dp"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="20dp"
+        android:padding="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +70,7 @@
                 android:layout_marginTop="30dp"
                 android:text="Procedencia:"
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +83,7 @@
                 android:layout_marginTop="12dp"
                 android:text="Nombre:"
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +96,7 @@
                 android:layout_marginTop="35dp"
                 android:text="Peso:"
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,10 +106,10 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="35dp"
+                android:layout_marginTop="40dp"
                 android:text="Sexo:"
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -178,7 +180,7 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/amaranth_bold"
                 android:text="Condicion Especial"
-                android:textSize="23dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cantidad" />
@@ -228,7 +230,7 @@
                 android:layout_marginLeft="36dp"
                 android:layout_marginTop="12dp"
                 android:text="Año"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#9163D5"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif-thin"
@@ -243,7 +245,7 @@
                 android:layout_marginLeft="60dp"
                 android:layout_marginTop="12dp"
                 android:text="Mes"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#9163D5"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif-thin"
@@ -267,7 +269,6 @@
                 android:id="@+id/formulario_responsable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/responsable">
@@ -279,8 +280,8 @@
                     android:layout_height="50dp"
                     android:layout_marginStart="172dp"
                     android:layout_marginLeft="172dp"
-                    android:visibility="gone"
                     android:src="@android:drawable/stat_sys_phone_call_forward"
+                    android:visibility="gone"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
                     app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
@@ -288,11 +289,11 @@
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="20dp"
                     android:fontFamily="@font/amaranth_bold"
                     android:text="Nombre:"
                     android:textColor="@color/black"
-                    android:textSize="25dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/datos_responsable" />
@@ -317,7 +318,7 @@
                     android:fontFamily="@font/amaranth_bold"
                     android:text="Apellido Paterno:"
                     android:textColor="@color/black"
-                    android:textSize="25dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView15" />
@@ -356,7 +357,7 @@
                     android:layout_marginEnd="136dp"
                     android:layout_marginRight="136dp"
                     android:text="Datos de Responsable"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="#9163D5"
                     android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -372,7 +373,7 @@
                     android:fontFamily="@font/amaranth_bold"
                     android:text="Apellido Materno:"
                     android:textColor="@color/black"
-                    android:textSize="25dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView16" />
@@ -416,11 +417,11 @@
                     android:id="@+id/textView19"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="44dp"
                     android:fontFamily="@font/amaranth_bold"
                     android:text="Celular:"
                     android:textColor="@color/black"
-                    android:textSize="25dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView18" />
@@ -429,11 +430,11 @@
                     android:id="@+id/textView20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="28dp"
                     android:fontFamily="@font/amaranth_bold"
                     android:text="E-mail:"
                     android:textColor="@color/black"
-                    android:textSize="25dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -442,11 +443,11 @@
                     android:id="@+id/textView21"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="32dp"
                     android:fontFamily="@font/amaranth_bold"
-                    android:text="Domicilio"
+                    android:text="Domicilio:"
                     android:textColor="@color/black"
-                    android:textSize="25dp"
+                    android:textSize="20dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView20" />
@@ -483,7 +484,7 @@
                 android:fontFamily="@font/amaranth_bold"
                 android:text="Responsable"
                 android:textColor="@color/black"
-                android:textSize="23dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
@@ -491,13 +492,13 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="140dp"
-                android:layout_height="64dp"
-                android:layout_marginTop="36dp"
+                android:layout_width="119dp"
+                android:layout_height="49dp"
+                android:layout_marginTop="52dp"
                 android:fontFamily="@font/annie_use_your_telescope"
                 android:text="Fecha Nacimiento:"
                 android:textColor="@color/black"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -511,25 +512,27 @@
 
     <ImageButton
         android:id="@+id/cameraButton"
-        android:layout_width="64dp"
-        android:layout_height="57dp"
+        android:layout_width="57dp"
+        android:layout_height="51dp"
         android:layout_marginTop="12dp"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialImagen"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
+        app:srcCompat="@drawable/sharp_photo_camera_black_36dp" />
 
     <Button
         android:id="@+id/guardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
-        android:background="@color/adopcion"
+        android:background="@drawable/yellow_rectangle"
         android:textAllCaps="false"
         android:padding="10dp"
         android:textStyle="bold"
         android:visibility="gone"
-        android:textSize="20dp"
+        android:fontFamily="@font/amaranth_bold"
+        android:textSize="30dp"
         android:text="Guardar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
