--- a/app/src/main/res/layout/material_fragment.xml
+++ b/app/src/main/res/layout/material_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#E6EAEA"
     android:layout_height="match_parent">
 
 
@@ -19,10 +20,10 @@
         app:srcCompat="@drawable/medicina_color" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:padding="10dp"
         android:layout_width="421dp"
         android:layout_height="475dp"
-        android:layout_marginTop="12dp"
+        android:padding="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cameraButton">
 
@@ -128,24 +129,29 @@
             android:id="@+id/Guardar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-
+            android:layout_marginTop="52dp"
+            android:background="@drawable/blue_rectangle"
+            android:fontFamily="@font/amaranth_bold"
+            android:padding="15dp"
             android:text="@string/guardar"
+            android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/categoria">
-        </Button>
+            app:layout_constraintTop_toBottomOf="@+id/categoria"></Button>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
         android:id="@+id/cameraButton"
-        android:layout_width="64dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="69dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="28dp"
+        android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialImagen"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
+        app:srcCompat="@drawable/sharp_photo_camera_black_36dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
