--- a/app/src/main/res/layout/material_list.xml
+++ b/app/src/main/res/layout/material_list.xml
@@ -7,19 +7,18 @@
     android:id="@+id/material_item"
     android:layout_height="wrap_content"
     android:background="@drawable/blue_rectangle"
-    android:layout_marginBottom="3dp"
+    android:layout_marginBottom="6dp"
     android:layout_marginHorizontal="5dp">
 
     <TextView
         android:id="@+id/nombreMaterial"
-        android:layout_width="172dp"
+        android:layout_width="213dp"
 
-        android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/alegreya_sans_extrabold"
         android:gravity="center_vertical"
         android:text="@string/nombre_material"
         android:textColor="@color/black"
@@ -27,16 +26,16 @@
         app:fontFamily="@font/patrick_hand"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/material_foto"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/cantidad_gastada"
-        android:visibility="gone"
-        android:layout_width="88dp"
-        android:layout_height="54dp"
+        android:layout_width="80dp"
+        android:layout_height="33dp"
         android:layout_marginTop="23dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginRight="3dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/alegreya_sans_extrabold"
         android:gravity="center_vertical"
@@ -44,17 +43,19 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="23dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/material_foto"
-        android:layout_width="86dp"
-        android:layout_height="96dp"
+        android:layout_width="56dp"
+        android:layout_height="55dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/medicina_color" />
