--- a/app/src/main/res/layout/universal_list_activity.xml
+++ b/app/src/main/res/layout/universal_list_activity.xml
@@ -8,10 +8,11 @@
 
     <ImageView
         android:id="@+id/main_image_view"
-        android:layout_width="202dp"
-        android:layout_height="120dp"
+        android:layout_width="217dp"
+        android:layout_height="169dp"
         android:layout_gravity="center"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="20dp"
         android:scaleType="centerInside"
         app:srcCompat="@drawable/campana" />
 
@@ -30,7 +31,7 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <Spinner
         android:id="@+id/estatus_adopcion"
@@ -38,6 +39,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
         android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
