--- a/app/src/main/res/layout/vista_pension_fragment.xml
+++ b/app/src/main/res/layout/vista_pension_fragment.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pension"
+    android:background="#EBF1F6"
     >
 
     <ImageView
         android:id="@+id/imagen_pension_gato"
-        android:layout_width="131dp"
-        android:layout_height="100dp"
+        android:layout_width="167dp"
+        android:layout_height="145dp"
         android:layout_marginTop="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
